#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package AppUtils
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-01
2013-07-21 Andy Salnikov
- some pieces left which had to be removed

Tag: V00-03-00
2013-07-21 Andy Salnikov
- removed deprecated constructors, many clients need to be migrated

Tag: V00-02-01
2013-07-20 Andy Salnikov
- added constructor to all options and argument classes which takes
  parser as an argument and adds options to parser

Tag: V00-02-00
2013-07-20 Andy Salnikov
- some refactoring and small improvements in command line parser
- options and arguments classes have some methods which are only 
  useful to parser moved to protected. Only stuff that is user-facing
  is left public
- options names can be spcified in compact form now: "verbose,v"
- some improvement to doxygen stuff
- *.icc files removed, code moved to headers

Tag: V00-01-12
2013-05-22 Andy Salnikov
- improve doxygen comments

Tag: V00-01-11
2013-01-16 Andy Salnikov
- fix in AppCmdOptSize, _changed flag was not updated

Tag: V00-01-10
2011-10-24 Andy Salnikov
- removed include Lusi.h

Tag: V00-01-09
2011-10-12 Andy Salnikov
- clone LusiPython/LusiPyApp as AppBase claass in this package, LusiPyApp
  becomes deprecated

Tag: V00-01-08
2011-08-18 Andy Salnikov
- implemented Python version of AppDataPath class

Tag: V00-01-07
2011-08-17 Andy Salnikov
- new class AppDataPath which finds a file in $SIT_DATA path
- new unit test for AppDataPath class
- new data file data/file-for-AppDataPath-unit-test needed for unit test

Tag: V00-01-05
2009-12-04 Andy Salnikov
- bug fix in AppCmdLine, empty long and short options were matched

Tag: V00-01-04
2009-05-13 Andy Salnikov